End of Day 1st May 2017 Added Small popup css / template Pagination can now capture limit on transfer if route allows Removed Student Status / Now in Student Grade information Added limit to person mange/edit routes Added Locker to Student Test for duplicate students in Learning Groups
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -114,6 +114,7 @@ person:
         toggle: Student Status
         immigrationTitle: 'Immigration Details: %name%'
         gradeTitle: 'Student Year/Grade: %name%'
+        title: 'Student Details: %name%'
     caregiver:
         toggle: Care Giver Status
         title: 'Care Giver Details: %name%'
