End of Day 3rd May 2017 Added Limit Choices to Pagination Added prompt to buttons Added pagination limits to People Management pages
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -19,3 +19,17 @@ Course Code: Course Code
 Activity Name: Activity Name
 Short Name: Short Name
 Year: Year
+people:
+    choice:
+        all:
+            title: All
+            label: All
+        student:
+            title: Students
+            label: Students
+        staff:
+            title: Staff
+            label: Staff
+        contact:
+            title: Contacts
+            label: Contacts
