--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -54,6 +54,7 @@ learninggroups:
         activity: Select an Activity for this Group
         year: Select the year
         course: Select the course
+        changeRecord: Add or edit selected Learning Group
     report:
         header: |
             <h3>Learning Group Report</h3>
@@ -67,6 +68,9 @@ learninggroups:
         exceededMax: |
             <p%class%>The number of students selected has exceeded the maximum number allowed. Allowed: <strong>%allowed%</strong> Participants: <strong>%participantCount%</strong></p>
         footer: ''
+        extra: |
+            <p%class%>An extra student has been found in the participant list.  This can happen if the grade of a student has been changed.</p>
+            <h4>Extra Student</h4>
         duplicated: |
             <p%class%>Some students appear in this Learning Group more than once.</p>
             <h4>Duplicated Students</h4>
