Integer Validator Added Form Tab return to Family / Person Form Mop up of Learning Groups Defaults added to sortBy in Pagination
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -64,3 +64,6 @@ year:
             overlapped: "The term dates must not overlap. Check the terms: %name1% and %name2%"
             order: The first day of the term must be before the last day of the term.
             delete: 'You are not able to delete the term (%term%).'
+integer:
+    invalid:
+        message: '%value% must be an integer. %type% detected.'
