--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -116,7 +116,7 @@ menu:
     timetable:
         manage: Manage Timetables
         title: Timetables
-        learninggroups: Learning Groups
+        activitygroups: Activity Groups
 ajax:
     wait_message: saving data.. please wait.. 
 Security: Security
