Timetable Constraints added for days and columns Form error now give success message by default.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -67,3 +67,9 @@ year:
 integer:
     invalid:
         message: '%value% must be an integer. %type% detected.'
+column:
+    timetable:
+        nameshort:
+            unique: The short name must be unique in the timetable.
+        name:
+            unique: The name must be unique in the timetable.
