--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -52,6 +52,8 @@ form:
     button:
         save: ''
         return: ''
+    submit:
+        success: The form was successfully saved.
 menu:
     site:
         manage: Configuration
