--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -73,6 +73,8 @@ column:
             unique: The short name must be unique in the timetable.
         name:
             unique: The name must be unique in the timetable.
+        sequence:
+            unique: 'The sequence must be unique in the timetable.'
 nowhitespace:
     error: 'The value cannot contain any white space characters. (No space, tab, carriage return, new line, vertical tab or form feed character'
 periods:
