--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -166,5 +166,5 @@ idletimeout:
     timeRemaining: 'Time Remaining'
 year:
     system:
-        current: 'You are working in the current system year.'
-        warning: 'Warning: You are not working in the current system year.  Changes made may not alter current details in the system. Proceed with caution.'
+        current: 'You are working in the current system year. Click here to change this setting.'
+        warning: 'Warning: You are not working in the current system year.  Changes made may not alter current details in the system. Proceed with caution. Click here to change this setting.'
