Pagination Changes to capture submit buttons correctly.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -126,6 +126,8 @@ person:
         caregiver: Care Giver
         user: User
         student: Student
+    reset:
+        button: Reset Form
 student:
     title:
         list: Student List
