Assign Days Help
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -72,6 +72,9 @@ timetable:
             title: Add Period
         remove:
             title: Remove Period
+    assign:
+        days:
+            help: 'Toggle the start of the rotation cycle by clicking any date.'
 activitygroups:
     title:
         list: Manage Activity Groups
