Year Display.  Buttons now take message/options.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -168,3 +168,4 @@ year:
     system:
         current: 'You are working in the current system year. Click here to change this setting.'
         warning: 'Warning: You are not working in the current system year.  Changes made may not alter current details in the system. Proceed with caution. Click here to change this setting.'
+        year: '<strong>%year%</strong>'
