--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -114,9 +114,8 @@ person:
         toggle: Student Status
         immigrationTitle: 'Immigration Details: %name%'
         gradeTitle: 'Student Year/Grade: %name%'
-        title: 'Student Details: %name%'
     caregiver:
-        toggle: Care Giver Status
+        toggle: 'Care Giver Status'
         title: 'Care Giver Details: %name%'
     user:
         title: 'User Details: %name%'
