--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -9,7 +9,7 @@ timetable:
     add:
         title: Add Timetable
     edit:
-        title: '%name%'
+        title: 'Edit %name%'
         description: Modify the details of the timetable.
     placeholder:
         year: Select Year
