--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -22,6 +22,8 @@ pagination:
         student: Students Only
         staff: Staff Only
         contact: All except Staff and Students
+    records:
+        only: 'Matching Records: %total%'
 Family Name: Family Name
 Given Name: Given Name
 Name: Name
@@ -31,3 +33,7 @@ Activity Name: Activity Name
 Short Name: Short Name
 Year: Year
 Course: Course
+Description: Description
+10: 10
+25: 25
+100: 100
