End of Day 30th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -159,6 +159,7 @@ period:
             title: '%name%'
     activity:
         placeholder: Select Activity
+        remove: Remove Activity
 column:
     remove:
         locked: 'The column has been locked and cannot be removed.'
