End of Day 2nd June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -46,6 +46,8 @@ form:
     reset:
         success: The password for the user was successfully altered and saved.  You can know sign into the site using the new password. 
         button: Reset
+    refresh:
+        button: 'Refresh'
     start_search: ""
     next: ""
     prev: ""
