--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -153,14 +153,20 @@ period:
                 data: '%space%, %tutor1%, %tutor2%, %tutor3%'
             space:
                 missing: No space allocated for this class.
-                duplicate: 'The space %space% is already allocated in this period.'
+                duplicate: 'The space %space% is already allocated to %activity% in this period.'
             staff:
                 missing: No staff allocated for this class.
-                duplicate: 'The staff member %name% is already allocated in this period.'
+                duplicate: 'The staff member %name% is already allocated to %activity% in this period.'
             failed:
                 count: 'Some activities are not correctly formated.  Found %count% activity not to specification.'
             edit:
                 button: 'Edit Activity'
+            report:
+                button: 'Click here for a report on free resources for this period.'
+                title: 'Period Activity Report'
+                description: ''
+                availableStaff: 'Available Staff (%count%)'
+                availableSpace: 'Available Spaces (Capacity) (%count%)'
     plan:
         title:
             add: Add Activity Group
