End of Day 3rd June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -167,6 +167,13 @@ period:
                 description: ''
                 availableStaff: 'Available Staff (%count%)'
                 availableSpace: 'Available Spaces (Capacity) (%count%)'
+            addline:
+                placeholder: Add Line Activities
+            remove:
+                success: 'The activity %name% was removed.'
+        line:
+            added: Activities where successfully added to the period.
+            none: No activities were added to the period.
     plan:
         title:
             add: Add Activity Group
